# aamr

config/rviz/: aamr.rviz
docker/: Dockerfile  build.yml  docker-compose.yml
flexbe/aamr/aamr_behaviors/: CMakeLists.txt  package.xml  setup.py
flexbe/aamr/aamr_behaviors/manifest/: test_1.xml
flexbe/aamr/aamr_behaviors/src/aamr_behaviors/: test_1_sm.py
flexbe/nav/nav_behaviors/: CMakeLists.txt  package.xml  setup.py
flexbe/nav/nav_behaviors/manifest/: navigate.xml
flexbe/nav/nav_behaviors/src/nav_behaviors/: navigate_sm.py
flexbe/nav/nav_states/: CMakeLists.txt  package.xml  setup.py
flexbe/nav/nav_states/src/nav_states/: create_move_base_goal.py  move_base.py
flexbe/perception/perception_states/: CMakeLists.txt  package.xml  setup.py
flexbe/perception/perception_states/src/perception_states/: plane_inspection.py
flexbe/robot_control/robot_control_behaviors/: CMakeLists.txt  package.xml  setup.py
flexbe/robot_control/robot_control_behaviors/manifest/: look_to_point.xml
flexbe/robot_control/robot_control_behaviors/src/robot_control_behaviors/: look_to_point_sm.py
flexbe/robot_control/robot_control_states/: CMakeLists.txt  package.xml  setup.py
flexbe/robot_control/robot_control_states/src/robot_control_states/: create_point_head_goal.py  move_head.py
ros/plane_detection/: CMakeLists.txt  package.xml  setup.py
ros/plane_detection/src/plane_detection/: main.py
ros/plane_detection_interfaces/: CMakeLists.txt  package.xml
ros/plane_detection_interfaces/msg/: Plane.msg  PlaneEquation.msg
ros/plane_detection_interfaces/srv/: DetectPlanes.srv
ros/plane_inspection/: CMakeLists.txt  package.xml  setup.py
ros/plane_inspection/src/plane_inspection/: conversion.py  main.py  pointcloud_utils.py
ros/plane_inspection_interfaces/: CMakeLists.txt  package.xml
ros/plane_inspection_interfaces/srv/: InspectPlane.srv
scripts/: spawn_objects.py
