<?xml version="1.0"?>
<package format="2">
  <name>plane_detection</name>
  <version>0.0.0</version>
  <description> not allowed to be empty ^^</description>
  <maintainer email="Maik.Knof@rwu.de">Maik Knof</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>plane_inspection_interfaces</exec_depend>
</package>

