<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package>
  <name>nav_behaviors</name>
  <version>0.0.0</version>
  <description> TODO </description>
  <maintainer email="knofm@rwu.de">Maik Knof</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <export>
    <flexbe_behaviors />
  </export>

</package>

